[package]
name = "babelone"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "babelone"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.19.0"
rustpython-parser = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
