[package]
name = "babelone"
version = "0.1.7"
edition = "2021"
# rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "babelone"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.19.0"
rustpython-parser = {git = "https://github.com/RustPython/Parser.git"}
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
