[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "babelone"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["rich-click"]

[project.scripts]
babelone = "babelone_cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "babelone_cli._babelone_core"
