[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "babelone"
dynamic = ["version"]
authors = [
    {name = "Rahul D. Ghosal", email = "rdghosal@gmail.com"}
]
maintainers = [
    {name = "Rahul D. Ghosal", email = "rdghosal@gmail.com"}
]
readme = "README.md"
description = "CLI that helps scaffolding and translating Python build spec files."
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["rich-click"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["rust", "pyo3", "rustpython", "cli"]

[project.scripts]
babelone = "babelone_cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "babelone_cli._babelone_core"
